--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,18 @@
         <filter-name>guiceFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <servlet>
+        <servlet-name>HttpErrorHandler</servlet-name>
+        <servlet-class>com.github.alexxand.errorHandlers.HttpErrorHandler</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>HttpErrorHandler</servlet-name>
+        <url-pattern>/httpErrorHandler</url-pattern>
+    </servlet-mapping>
+
+    <error-page>
+        <location>/httpErrorHandler</location>
+    </error-page>
 </web-app>
