Added implementation of DAO for postgresql

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     
     <!--<servlet>
         <servlet-name>HttpErrorHandler</servlet-name>
-        <servlet-class>com.github.alexxand.errorHandlers.HttpErrorHandler</servlet-class>
+        <servlet-class>com.github.alexxand.servletsrorsrorHandler</servlet-class>
     </servlet>
 
     <servlet-mapping>
