Register and login pages without photo validation, skip link and redirection to profile page is done

--- a/src/main/resources/db/cfg/postgres.properties
+++ b/src/main/resources/db/cfg/postgres.properties
@@ -1,5 +1,5 @@
-postres.user = postgres
-postres.password = postgres
-postres.db.name = network
-postres.max.connections = 4
-postres.init.connections = 2
+postgres.user = postgres
+postgres.password = postgres
+postgres.db.name = network
+postgres.max.connections = 4
+postgres.init.connections = 2
