--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
             <artifactId>flyway-core</artifactId>
             <version>1.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.lambdaworks</groupId>
+            <artifactId>scrypt</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
